--- a/src/renderer/App.global.css
+++ b/src/renderer/App.global.css
@@ -40,21 +40,13 @@ li {
   list-style: none;
 }
 
-a {
-  text-decoration: none;
-  height: fit-content;
-  width: fit-content;
-  margin: 10px;
-}
-
-a:hover {
-  opacity: 1;
-  text-decoration: none;
-}
-
 .Hello {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 20px 0;
+}
+
+.Hello > :nth-child(2) {
+  margin-left: 20px;
 }
